--- a/A/src/main/resources/application.properties
+++ b/A/src/main/resources/application.properties
@@ -1,3 +1,19 @@
+# Nombre del servicio en Eureka
 spring.application.name=SERVICIO1
 server.port=8081
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=https://eureka-server-1-1sfl.onrender.com/eureka/
+
+eureka.instance.prefer-ip-address=false
+eureka.instance.hostname=servicio1-66i5.onrender.com
+
+
+eureka.instance.non-secure-port-enabled=false
+eureka.instance.secure-port-enabled=true
+eureka.instance.secure-port=443
+
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+eureka.instance.lease-renewal-interval-in-seconds=10
+eureka.instance.lease-expiration-duration-in-seconds=30
