--- a/A/src/main/resources/application.properties
+++ b/A/src/main/resources/application.properties
@@ -13,7 +13,7 @@ eureka.instance.non-secure-port-enabled=false
 eureka.instance.secure-port-enabled=true
 eureka.instance.secure-port=443
 
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+#eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 eureka.instance.lease-renewal-interval-in-seconds=10
 eureka.instance.lease-expiration-duration-in-seconds=30
